--- a/src/components/PlayerCredit/style.css
+++ b/src/components/PlayerCredit/style.css
@@ -1,5 +1,5 @@
 .product-price-container {
-  display: flex;
+  display: flex;  
 }
 
 .product-price-container span {
@@ -7,11 +7,12 @@
   font-size: 18px;
   margin-top: 4px;
   color: #9e9e9e;
+  min-width: 100px;
 }
 
 .product-price-container h3 {
   font-weight: bold;
-  font-size: 32px;
+  font-size: 30px;
   color: #407BFF;
   margin-left: 10px
 }
