--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,10 +1,20 @@
 .main-nav {
-  background-color: #40baff;
+  background-color: #004346;
+}
+.logo{
+  display: flex;
+  align-items: center;
 }
 
+.icone {
+  font-size: 30px;
+  padding: 5px;
+  width: 30;
+  color: #E6F8B2;
+}
 .nav-logo-text,
 .nav-logo-text:hover {
-  color: #ffff;
+  color: #F2FBE0;
 }
 
 .nav-logo-text h4 {
